src/objects/BP_Molecule__c.object
<CustomObject>
    <description>Junction Object between Business Plan &amp; Molecule</description>
    <fields>
        <fullName>RWE_Business_Planning__c</fullName>
        <label>RWE Business Planning</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipLabel>RWE BP Molecules</relationshipLabel>
        <relationshipName>RWE_BP_Molecules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RWE_Molecule__c</fullName>
        <label>RWE Molecule</label>
        <referenceTo>Molecule__c</referenceTo>
        <relationshipLabel>RWE BP Molecules</relationshipLabel>
        <relationshipName>RWE_BP_Molecules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_BP_Molecule__c</fullName>
        <label>Unique BP Molecule</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RWE BP Molecule</label>
    <nameField>
        <displayFormat>BPM-{0000}</displayFormat>
        <label>BP_Molecule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE BP Molecules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>